@@ -41,4 +41,11 @@ audio_output_enable_index(unsigned idx);
 bool
 audio_output_disable_index(unsigned idx);
 
+/**
+ * Toggles an audio output.  Returns false if the specified output
+ * does not exist.
+ */
+bool
+audio_output_toggle_index(unsigned idx);
+
 #endif
